--- a/music_notes.ipynb
+++ b/music_notes.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -200,6 +200,7 @@
    ],
    "source": [
     "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "import tensorflow as tf\n",
     "import math\n",
     "#from magenta.models.nsynth import utils\n",
@@ -210,30 +211,46 @@
     "from keras.layers.advanced_activations import LeakyReLU\n",
     "from keras.optimizers import Adam\n",
     "import keras.backend as K\n",
-    "import librosa\n",
-    "import librosa.display\n",
     "import pylab\n",
     "import matplotlib.pyplot as plt\n",
     "from utils import audio_utils, general_utils\n",
     "from matplotlib import figure\n",
     "import gc\n",
-    "from path import Path\n",
     "\n",
     "import importlib\n",
-    "\n",
-    "warnings.filterwarnings('ignore')\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0901 18:44:30.351136 140319900587840 deprecation.py:323] From /home/ec2-user/git/udacity_capstone/utils/general_utils.py:5: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use eager execution and: \n",
+      "`tf.data.TFRecordDataset(path)`\n",
+      "W0901 18:51:17.298941 140319900587840 deprecation_wrapper.py:119] From /home/ec2-user/git/udacity_capstone/utils/audio_utils.py:62: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "W0901 18:51:17.983386 140319900587840 deprecation_wrapper.py:119] From /home/ec2-user/git/udacity_capstone/utils/audio_utils.py:69: The name tf.FixedLenFeature is deprecated. Please use tf.io.FixedLenFeature instead.\n",
+      "\n",
+      "W0901 18:51:17.986430 140319900587840 deprecation_wrapper.py:119] From /home/ec2-user/git/udacity_capstone/utils/audio_utils.py:73: The name tf.parse_single_example is deprecated. Please use tf.io.parse_single_example instead.\n",
+      "\n",
+      "W0901 18:51:17.998652 140319900587840 deprecation.py:323] From /home/ec2-user/git/udacity_capstone/utils/audio_utils.py:81: DatasetV1.make_one_shot_iterator (from tensorflow.python.data.ops.dataset_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `for ... in dataset:` to iterate over a dataset. If using `tf.estimator`, return the `Dataset` object directly from your input function. As a last resort, you can use `tf.compat.v1.data.make_one_shot_iterator(dataset)`.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processed 2450 files in 12 batches"
+      "processed 289200 files out of 289205 in 1445 batches"
      ]
     }
    ],
@@ -241,34 +258,39 @@
     "importlib.reload(audio_utils)\n",
     "importlib.reload(general_utils)\n",
     "\n",
-    "#audio_utils.write_spectograms('data/nsynth-test.tfrecord', 'data/nsynth-test-spectrograms')\n",
-    "audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', 'data/nsynth-valid-spectrograms', 200)\n"
+    "#audio_utils.write_spectograms_parallelized('data/nsynth-test.tfrecord', 'data/nsynth-test-spectrograms', 200)\n",
+    "#audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', 'data/nsynth-valid-spectrograms', 200)\n",
+    "\n",
+    "## following took about 4 or 5 hours\n",
+    "#audio_utils.write_spectograms_parallelized('data/nsynth-train.tfrecord', 'data/nsynth-train-spectrograms', 200)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0902 18:40:33.768112 140111866513216 deprecation.py:323] From /home/ec2-user/git/udacity_capstone/utils/audio_utils.py:86: DatasetV1.make_one_shot_iterator (from tensorflow.python.data.ops.dataset_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `for ... in dataset:` to iterate over a dataset. If using `tf.estimator`, return the `Dataset` object directly from your input function. As a last resort, you can use `tf.compat.v1.data.make_one_shot_iterator(dataset)`.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of processors:  4\n"
+      "processed 12650 files out of 12678 in 63 batches"
      ]
     }
    ],
    "source": [
-    "import multiprocessing as mp\n",
-    "print(\"Number of processors: \", mp.cpu_count())"
+    "importlib.reload(audio_utils)\n",
+    "audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', 'data/valid_redownload', 200)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
