type: docs body: updated notes in the notebook

--- a/identify_instrument.ipynb
+++ b/identify_instrument.ipynb
@@ -711,7 +711,7 @@
     "# Save the checkpoints to here. Make sure the file name reflects the model version.\n",
     "model_hdf5 = 'saved_models/weights.best.v7_1.hdf5'\n",
     "\n",
-    "# Use the same model for each of the steps below\n",
+    "# Use the same model for each of the steps below. See 'models.py' for details.\n",
     "model_creator = models.create_model_v7\n",
     "\n",
     "checkpointer = ModelCheckpoint(filepath=model_hdf5, \n",
@@ -738,7 +738,7 @@
     "\n",
     "NOTE: The results below are ONLY for the most recently tested model.\n",
     "\n",
-    "<b> Please see the `utils.models.py` file for all of the models and the results for each.</b>"
+    "<b> Please see the `models.py` file for all of the models and the results for each.</b>"
    ]
   },
   {
