type: feature body: adding to the visualizations used in study report

--- a/identify_instrument.ipynb
+++ b/identify_instrument.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0921 12:56:51.911619 4511598016 deprecation_wrapper.py:119] From /Users/samwachtel/git/udacity/udacity_capstone/utils/audio_utils.py:16: The name tf.FixedLenFeature is deprecated. Please use tf.io.FixedLenFeature instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -174,11 +184,6 @@
       "\n",
       "RECORD  2 \n",
       "\n",
-      "velocity\n",
-      "int64_list {\n",
-      "  value: 127\n",
-      "}\n",
-      "\n",
       "pitch\n",
       "int64_list {\n",
       "  value: 100\n",
@@ -248,6 +253,11 @@
       "instrument_family_str\n",
       "bytes_list {\n",
       "  value: \"bass\"\n",
+      "}\n",
+      "\n",
+      "velocity\n",
+      "int64_list {\n",
+      "  value: 127\n",
       "}\n",
       "\n"
      ]
