type: feature body: building visualizations and upgrading the way spectrograms are generated

--- a/identify_instrument.ipynb
+++ b/identify_instrument.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Using TensorFlow backend.\n",
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0921 12:56:51.911619 4511598016 deprecation_wrapper.py:119] From /Users/samwachtel/git/udacity/udacity_capstone/utils/audio_utils.py:16: The name tf.FixedLenFeature is deprecated. Please use tf.io.FixedLenFeature instead.\n",
+      "W0922 19:47:52.601043 4648625600 deprecation_wrapper.py:119] From /Users/samwachtel/git/udacity/udacity_capstone/utils/general_utils.py:15: The name tf.FixedLenFeature is deprecated. Please use tf.io.FixedLenFeature instead.\n",
       "\n"
      ]
     }
@@ -30,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'utils.general_utils' from '/home/ec2-user/git/udacity_capstone/utils/general_utils.py'>"
+       "<module 'utils.general_utils' from '/Users/samwachtel/git/udacity/udacity_capstone/utils/general_utils.py'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -104,6 +105,16 @@
      "text": [
       "\n",
       "RECORD  1 \n",
+      "\n",
+      "sample_rate\n",
+      "int64_list {\n",
+      "  value: 16000\n",
+      "}\n",
+      "\n",
+      "instrument_source\n",
+      "int64_list {\n",
+      "  value: 2\n",
+      "}\n",
       "\n",
       "qualities\n",
       "int64_list {\n",
@@ -171,28 +182,8 @@
       "  value: \"bass_synthetic_033-100-100\"\n",
       "}\n",
       "\n",
-      "sample_rate\n",
-      "int64_list {\n",
-      "  value: 16000\n",
-      "}\n",
-      "\n",
-      "instrument_source\n",
-      "int64_list {\n",
-      "  value: 2\n",
-      "}\n",
-      "\n",
       "\n",
       "RECORD  2 \n",
-      "\n",
-      "pitch\n",
-      "int64_list {\n",
-      "  value: 100\n",
-      "}\n",
-      "\n",
-      "instrument_family\n",
-      "int64_list {\n",
-      "  value: 0\n",
-      "}\n",
       "\n",
       "note_str\n",
       "bytes_list {\n",
@@ -259,6 +250,16 @@
       "int64_list {\n",
       "  value: 127\n",
       "}\n",
+      "\n",
+      "pitch\n",
+      "int64_list {\n",
+      "  value: 100\n",
+      "}\n",
+      "\n",
+      "instrument_family\n",
+      "int64_list {\n",
+      "  value: 0\n",
+      "}\n",
       "\n"
      ]
     }
@@ -286,13 +287,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processed 550 files out of 4096 in 2 batches"
+     ]
+    }
+   ],
    "source": [
-    "audio_utils.write_spectograms_parallelized('data/nsynth-test.tfrecord', 'data/nsynth-test-spectrograms', 200)\n",
-    "audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', 'data/nsynth-valid-spectrograms', 200)\n",
+    "importlib.reload(audio_utils)\n",
+    "audio_utils.write_spectograms_parallelized('data/nsynth-test.tfrecord', 'data/nsynth-test-spectrograms', 200, mel=False)\n",
+    "#audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', 'data/nsynth-valid-spectrograms', 200, mel=False)\n",
     "\n",
     "## following took about 4 or 5 hours\n",
-    "audio_utils.write_spectograms_parallelized('data/nsynth-train.tfrecord', 'data/nsynth-train-spectrograms', 200)\n",
+    "#audio_utils.write_spectograms_parallelized('data/nsynth-train.tfrecord', 'data/nsynth-train-spectrograms', 200, mel=False)\n",
     "\n",
     "#output was: \"processed 289200 files out of 289205 in 1445 batches\""
    ]
