type: bug body: fixed spectrogram border

--- a/identify_instrument.ipynb
+++ b/identify_instrument.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0927 20:00:12.570533 140317220951872 deprecation_wrapper.py:119] From /home/ec2-user/git/udacity_capstone/utils/general_utils.py:15: The name tf.FixedLenFeature is deprecated. Please use tf.io.FixedLenFeature instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -274,27 +285,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<module 'utils.audio_utils' from '/home/ec2-user/git/udacity_capstone/utils/audio_utils.py'>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "processed 12678 files out of 12678 in 63 batches"
+     ]
     }
    ],
    "source": [
     "importlib.reload(audio_utils)\n",
-    "#audio_utils.write_spectograms_parallelized('data/nsynth-test.tfrecord', 'data/nsynth-test-spectrograms', \n",
-    "#                                           batch_size=200, mel=False, overwrite=False)\n",
+    "audio_utils.write_spectograms_parallelized('data/nsynth-test.tfrecord', 'data/nsynth-test-spectrograms', \n",
+    "                                           batch_size=200, mel=False, overwrite=False)\n",
     "\n",
-    "#audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', 'data/nsynth-valid-spectrograms', \n",
-    "#                                           batch_size=200, mel=False, overwrite=False)\n",
+    "audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', 'data/nsynth-valid-spectrograms', \n",
+    "                                           batch_size=200, mel=False, overwrite=False)\n",
     "\n",
     "## following took about 4 or 5 hours\n",
     "#audio_utils.write_spectograms_parallelized('data/nsynth-train.tfrecord', 'data/nsynth-train-spectrograms', \n",
