type: feature body: Developing more visualizations, including feature maps.

--- a/visualizations.ipynb
+++ b/visualizations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,15 +12,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0930 21:28:15.786721 140636397938496 deprecation_wrapper.py:119] From /home/ec2-user/git/udacity_capstone/utils/general_utils.py:19: The name tf.FixedLenFeature is deprecated. Please use tf.io.FixedLenFeature instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import itertools as it\n",
     "import scipy.io.wavfile as wavfile\n",
     "import importlib\n",
+    "import models\n",
     "from utils import general_utils, audio_utils\n",
     "importlib.reload(audio_utils)\n",
     "importlib.reload(general_utils)\n",
@@ -475,6 +487,16 @@
     "importlib.reload(general_utils)\n",
     "\n",
     "general_utils.display_image('data/nsynth-test-spectrograms/vocal/vocal_acoustic_000-064-075.jpg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "importlib.reload(general_utils)\n",
+    "general_utils.clear_keras_sessions()"
    ]
   },
   {
