type: feat body: tweaked for show

--- a/identify_instrument.ipynb
+++ b/identify_instrument.ipynb
@@ -307,34 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'utils.audio_utils' from '/home/ec2-user/git/udacity_capstone/utils/audio_utils.py'>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "importlib.reload(audio_utils)\n",
     "\n",
-    "### COMMENTED OUT TO MAKE SURE WE DON'T ACCIDENTALLY START THE PROCESS OF GOING THROUGH OVER 300K RECORDS\n",
+    "### COMMENT OUT IF FILES EXIST TO MAKE SURE WE DON'T ACCIDENTALLY START THE PROCESS OF GOING THROUGH OVER 300K RECORDS\n",
     "\n",
-    "#audio_utils.write_spectograms_parallelized('data/nsynth-test.tfrecord', test_spectrogram_folder, \n",
-    "#                                           batch_size=200, mel=True, overwrite=False, regex_filter=regex_filter)\n",
+    "audio_utils.write_spectograms_parallelized('data/nsynth-test.tfrecord', test_spectrogram_folder, \n",
+    "                                           batch_size=200, mel=True, overwrite=False, regex_filter=regex_filter)\n",
     "\n",
-    "#audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', valid_spectrogram_folder, \n",
-    "#                                           batch_size=200, mel=True, overwrite=False, regex_filter=regex_filter)\n",
+    "audio_utils.write_spectograms_parallelized('data/nsynth-valid.tfrecord', valid_spectrogram_folder, \n",
+    "                                           batch_size=200, mel=True, overwrite=False, regex_filter=regex_filter)\n",
     "\n",
     "## following took about 4 or 5 hours with full dataset\n",
-    "#audio_utils.write_spectograms_parallelized('data/nsynth-train.tfrecord', train_spectrogram_folder, \n",
-    "#                                           batch_size=200, mel=True, overwrite=False, regex_filter=regex_filter)\n",
+    "audio_utils.write_spectograms_parallelized('data/nsynth-train.tfrecord', train_spectrogram_folder, \n",
+    "                                           batch_size=200, mel=True, overwrite=False, regex_filter=regex_filter)\n",
     "\n",
     "#output for full dataset was: \"processed 289205 files out of 289205 in 1446 batches\""
    ]
